# RBT-16

./: .clang-format  .clangd  .gitignore  .gitmodules  .m68krc.json  CMakeLists.txt  README.md  build.zig  build.zig.zon  zls.json
cmake/: base.cmake  libraries.cmake
docs/: apu.md  m68010_cycles.txt  pmmu-sketch.md  ram.md  vdp.md
include/: Engine.hpp  log.hpp  types.hpp  utils.hpp
include/core/: Cpu.hpp  EffectiveAddress.hpp  Memory.hpp  MemoryBus.hpp  Mmu.hpp  common.hpp  decoder.hpp
include/emu/: EffectiveAddress.hpp  MMU.hpp  Mmu.hpp
include/rbt/: basic_types.h  error.h  error_codes.h  helpers.h  mmu.h
include/rbt/cpu/: bus.h  cpu.h  decode.h  effective_address.h  m68k.h  mmu.h  register_types.h  timing.h  types.h
include/utils/: log.hpp
src/: error.c  error.h  helpers.c  helpers.zig  log.c  log.cpp  log.h  main.cpp  main.zig
src/core/: EffectiveAddress.cpp  Engine.cpp  Memory.cpp  MemoryBus.cpp  Mmu.cpp  Mmu.zig  decoder.cpp  effective_address.zig  types.zig
src/cpu/: bus.c  bus_internal.h  cpu.c  cpu.h  cpu_execute.inc  cpu_internal.h  decode.c  decode.h  effective_address.c  effective_address.h  mmu.c  mmu_internal.h  register_types.c  timing.c  timing.h  types.zig
src/emu/: EffectiveAddress.cpp  MMU.cpp  Mmu.cpp
src/utils/: log.cpp
tests/: CMakeLists.txt
tests/scripts/: decode.py  generate_all.py
tests/src/: effective_address.cpp  opcodes.asm68k  opcodes.h  opcodes.x68  sst.h
tests/src/cpu/: effective_address.c  test_bus.c  test_decode.c  test_ea.c  test_mmu.c  test_opcodes.c
tests/src/output/: abcd.h  addal.h  addaw.h  addb.h  addl.h  addw.h  addxb.h  addxl.h  addxw.h  andb.h  andl.h  andw.h  aslb.h  asll.h  aslw.h  asrb.h  asrl.h  asrw.h  bchg.h  bclr.h  bset.h  bsr.h  btst.h  chk.h  clrb.h  clrl.h  clrw.h  cmpal.h  cmpaw.h  cmpb.h  cmpl.h  cmpw.h  divs.h  divu.h  eorb.h  eorl.h  eorw.h  exg.h  extl.h  extw.h  (+70 more)
